添加了句子编号

--- a/speech_synthesis/chinese/BZNSYP/notebooks/BZNSYP-创建频谱图数据.ipynb
+++ b/speech_synthesis/chinese/BZNSYP/notebooks/BZNSYP-创建频谱图数据.ipynb
@@ -801,6 +801,27 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "HlBoTh2J4mbS"
+      },
+      "source": [
+        "#### 保存句子编号"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KF3VKtxa44ha"
+      },
+      "outputs": [],
+      "source": [
+        "with open('sentence_id.json', 'w') as f:\n",
+        "  json.dump(list(sentences.keys()), f)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "SIRJUvJu5p5a"
       },
       "source": [
@@ -1199,6 +1220,7 @@
         "!7z a BZNSYP_data.7z \\\n",
         "README.txt \\\n",
         "pinyin_mapper.json \\\n",
+        "sentence_id.json \\\n",
         "audios.index audios.data-00000-of-00001 \\\n",
         "mu_law.index mu_law.data-00000-of-00001 \\\n",
         "magnitudes.index magnitudes.data-00000-of-00001 \\\n",
@@ -1241,6 +1263,7 @@
         "!cp \\\n",
         "README.txt \\\n",
         "pinyin_mapper.json \\\n",
+        "sentence_id.json \\\n",
         "audios.index audios.data-00000-of-00001 \\\n",
         "mu_law.index mu_law.data-00000-of-00001 \\\n",
         "magnitudes.index magnitudes.data-00000-of-00001 \\\n",
@@ -1257,7 +1280,8 @@
     "colab": {
       "collapsed_sections": [],
       "name": "BZNSYP - 创建频谱图数据.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
