--- a/speech_synthesis/chinese/BZNSYP/notebooks/BZNSYP-创建频谱图数据.ipynb
+++ b/speech_synthesis/chinese/BZNSYP/notebooks/BZNSYP-创建频谱图数据.ipynb
@@ -69,21 +69,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NQuOVVldmQ9f",
-        "outputId": "174abd07-e8b5-4fe1-959e-d24d96a4fb9d"
+        "id": "NQuOVVldmQ9f"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
@@ -244,12 +232,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BYaydgj2oFns",
-        "outputId": "e0d2e082-57b2-4037-ab72-78f336152874"
+        "outputId": "8a99ce91-5b59-4b97-a579-a21f1e9c052d"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "发音类别总数： 1535\n"
           ]
@@ -260,24 +248,27 @@
         "\n",
         "for i in phonetic:\n",
         "  # 查看训练数据中存在哪几种声调\n",
-        "  exist = [i + str(x) in occurred_pinyin for x in range(1, 6)]\n",
+        "  exist = [i + str(x) in occurred_pinyin for x in range(6)]\n",
         "\n",
         "  if any(exist):\n",
         "    # 确定当缺少某个声调的时候使用哪个声调来进行代替\n",
-        "    base = 4 if exist[4] else\\\n",
-        "          0 if exist[0] else\\\n",
+        "    base = 0 if exist[0] else\\\n",
+        "          5 if exist[5] else\\\n",
         "            1 if exist[1] else\\\n",
         "              2 if exist[2] else\\\n",
-        "                3 if exist[3] else -1\n",
+        "                3 if exist[3] else\\\n",
+        "                  4 if exist[4] else -1\n",
         "    \n",
-        "    base_name = i + str(base + 1)\n",
+        "    base_name = i + str(base)\n",
         "    pinyin_mapper[base_name] = pinyin_mapper['count']\n",
         "    pinyin_mapper[pinyin_mapper['count']] = base_name\n",
         "    pinyin_mapper['count'] += 1\n",
+        "    \n",
+        "    pinyin_mapper[i] = pinyin_mapper[base_name]\n",
         "\n",
         "    for j, k in enumerate(exist):\n",
         "      if j != base:\n",
-        "        name = i + str(j + 1)\n",
+        "        name = i + str(j)\n",
         "        if k:\n",
         "          pinyin_mapper[name] = pinyin_mapper['count']\n",
         "          pinyin_mapper[pinyin_mapper['count']] = name\n",
@@ -316,18 +307,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XItQXmmvGtET",
-        "outputId": "f6965810-2d2d-41fc-bfce-68d498297f5e"
+        "outputId": "f0edb229-b014-4cae-e793-0d587f315635"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "['chua', 'den', 'eng', 'lue', 'm', 'nou', 'nun']"
             ]
           },
-          "execution_count": null,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": null
         }
       ],
       "source": [
@@ -384,18 +375,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bbYXOB00Qyld",
-        "outputId": "3f4d2dba-8cbe-41f5-9f17-2770883408cf"
+        "outputId": "16f51c41-bd71-495c-8b61-258bd79bc626"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "['。', '、', '…', '”', '“', '—', '！', '（', '）', '，', '：', '；', '？']"
             ]
           },
-          "execution_count": null,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": null
         }
       ],
       "source": [
@@ -462,12 +453,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YTN-zafAbhD8",
-        "outputId": "34292522-961a-4a13-b961-d4635990a942"
+        "outputId": "1c6a35b7-d66a-4935-a3cc-6f69ae7526f2"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "不包含儿化音的句子有： 9773\n"
           ]
@@ -530,12 +521,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mk23Npm9ugp-",
-        "outputId": "88e94138-8f41-4205-bf94-4861237f5dd4"
+        "outputId": "63dc05f8-b1d6-4670-f57e-cf5eb8c19def"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "sentence： 海边、沙滩，还有吃海鲜呀。\n",
             "pinyins： ['hai3', 'bian1', 'sha1', 'tan1', 'hai2', 'you3', 'chi1', 'hai3', 'xian1', 'ya5']\n",
@@ -567,18 +558,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MVaaRw1RSsTF",
-        "outputId": "59e4bcae-15c8-41c4-87fa-c66af6c54319"
+        "outputId": "cbb83523-2bf3-40d8-a16f-070ebfc57d8e"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "37"
             ]
           },
-          "execution_count": null,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": null
         }
       ],
       "source": [
@@ -1278,10 +1269,8 @@
   ],
   "metadata": {
     "colab": {
-      "collapsed_sections": [],
       "name": "BZNSYP - 创建频谱图数据.ipynb",
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
